# LedgerMind

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  logging_setup.py  main.py  settings.py
backend/app/calculations/: audit.py  facts_store.py  sandbox.py  tools.py  types.py
backend/app/generation/: orchestrator.py  prompts.py  stream.py
backend/app/ingestion/: arabic.py  chunking.py  hashing.py  parser_docling.py  pipeline.py  tables.py
backend/app/jobs/: arq_worker.py  queue.py
backend/app/middleware/: provider_key.py  request_id.py
backend/app/persistence/: db.py  models.py  repo.py
backend/app/providers/: anthropic_provider.py  base.py  catalog.py  gemini.py  openai_compat.py  registry.py
backend/app/retrieval/: embedder.py  orchestrator.py  qdrant_client.py  reranker.py  rewrite.py
backend/app/routers/: chat.py  documents.py  health.py  jobs.py  providers.py  sessions.py
backend/app/schemas/: chat.py  ingest.py  providers.py  sessions.py
backend/app/storage/: files.py  s3.py
backend/tests/: test_arabic.py  test_facts_store.py  test_hashing.py  test_sandbox.py  test_smoke.py  test_table_extraction.py
docs/diagrams/: README.md
docs/screenshots/: README.md
web/: .gitignore  Dockerfile  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/proxy/[...path]/: route.ts
web/app/architecture/: page.tsx
web/app/chat/: page.tsx
web/app/chat/[sessionId]/: page.tsx
web/app/setup/: page.tsx
web/components/: site-footer.tsx  site-header.tsx  theme-provider.tsx
web/components/chat/: assistant-message.tsx  citation-chip.tsx  document-panel.tsx  tool-card.tsx
web/components/setup/: key-input.tsx  provider-grid.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  spinner.tsx
web/hooks/: use-chat-stream.ts
web/lib/: api-client.ts  auth-store.ts  chat-api.ts  documents-api.ts  providers.ts  sse.ts
