[project]
name = "ledgermind-backend"
version = "0.1.0"
description = "Ledgermind FastAPI backend — bilingual financial-RAG with deterministic calculations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  # Core web
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx[http2]>=0.27.0",
  "python-multipart>=0.0.12",
  "sse-starlette>=2.1.3",

  # Persistence
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",
  "duckdb>=1.1.3",

  # Vector / embeddings / rerank
  "qdrant-client>=1.12.1",
  "fastembed>=0.4.2",

  # Document ingestion
  "docling>=2.5.0",
  "rapidocr-onnxruntime>=1.4.0",
  "pypdf>=5.1.0",
  "semantic-text-splitter>=0.18.0",

  # Job queue + object storage
  "arq>=0.26.3",
  "aioboto3>=13.2.0",
  "redis>=5.2.0",

  # LLM SDKs (official)
  "openai>=1.55.0",
  "anthropic>=0.39.0",
  "google-genai>=0.3.0",
  "mistralai>=1.2.5",
  "cohere>=5.11.0",
  "groq>=0.13.0",

  # Misc
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "python-slugify>=8.0.4",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-httpx>=0.34.0",
  "respx>=0.21.1",
  "types-aioboto3>=13.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "RET", "SIM", "PL"]
ignore = [
  "PLR0913",  # too many args (FastAPI deps)
  "S101",     # assert
  "S105",     # hardcoded password — false positives in this codebase
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fastembed.*", "docling.*", "duckdb.*", "rapidocr_onnxruntime.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
testpaths = ["tests"]
